rename search button to seek

--- a/opposeek/templates/index.html
+++ b/opposeek/templates/index.html
@@ -8,7 +8,7 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Search">
+    <input type="submit" value="Seek">
 </form>
 {% if search %}
 <br/><br/>
