displays opposing searches

--- a/opposeek/templates/index.html
+++ b/opposeek/templates/index.html
@@ -8,12 +8,20 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Seek">
+    <input type="submit" value="Search">
 </form>
 {% if search %}
-<br/><br/>
-Your search:
-<a target="_blank" href="https://www.google.com/search?q={{ search }}">{{ search }}</a>
+    {% if opposing %}
+        <br/><br/>
+        Opposing searches:
+        {% for search in opposing %}
+            <br/><br/>
+            <a target="_blank" href="https://www.google.com/search?q={{ search }}">{{ search }}</a>
+        {% endfor %}
+    {% endif %}
+    <br/><br/>
+    Your search:
+    <a target="_blank" href="https://www.google.com/search?q={{ search }}">{{ search }}</a>
 {% endif %}
 </body>
 </html>
