--- a/opposeek/templates/index.html
+++ b/opposeek/templates/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>OppoSeek</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container text-center">
+    <div class="container text-center starter-template">
+        <h1>OppoSeek</h1>
         <form action="" method="post">
             {% csrf_token %}
             {{ form }}
